syntax = "proto3";

package api.banking.funding;

option go_package = "github.com/meshtrade/api/go/banking/funding";

import "api/proto/banking/funding/directEFTMetaData.proto";
import "api/proto/banking/funding/peachPaymentMetaData.proto";
import "api/proto/banking/funding/peachSettlementMetadata.proto";


/*
@bson-marshalled
 */
message MetaData {
  oneof metaData {
    api.banking.funding.PeachPaymentMetaData PeachPaymentMetaData = 1;
    api.banking.funding.PeachSettlementMetaData PeachSettlementMetaData = 2;
    api.banking.funding.DirectEFTMetaData DirectEFTMetaData = 4;
  }
}
